--- a/Coffee2Project/Coffee2/src/main/AndroidManifest.xml
+++ b/Coffee2Project/Coffee2/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-sdk
         android:minSdkVersion="7"
         android:targetSdkVersion="16" />
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
